objects/Interconnection_Request__c.object
<CustomObject>
    <description>form used to request the start of the interconnection application process</description>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person you select will be the one who receives the request once you hit Submit for Approval</inlineHelpText>
        <label>Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Engineer, Designer</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Interconnection_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Are_Product_Data_Sheets_Attached__c</fullName>
        <inlineHelpText>product data sheet should be attached in notes &amp; attachments before final approvals</inlineHelpText>
        <label>Are Product Data Sheets Attached?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not at this time</fullName>
                </value>
                <value>
                    <fullName>Not necessary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Apps_Engineer_Email__c</fullName>
        <inlineHelpText>this is pulled over from the opportunity</inlineHelpText>
        <label>Assigned Apps Engineer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_AE_Completed__c</fullName>
        <label>Date AE Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PE_Approved__c</fullName>
        <label>Date PE Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_by_PD__c</fullName>
        <label>Date Submitted by PD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_to_Application_Technical_Info__c</fullName>
        <inlineHelpText>post link from box.com to the working application</inlineHelpText>
        <label>Link to Application Technical Info</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Pre_Application_Report__c</fullName>
        <inlineHelpText>post link from box.com to the pre application report</inlineHelpText>
        <label>Link to Pre-Application Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Single_Line_Diagram__c</fullName>
        <inlineHelpText>post link from box.com for the single line diagram</inlineHelpText>
        <label>Link to Single Line Diagram</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Site_Layout__c</fullName>
        <inlineHelpText>post link from box.com to the documents related to the site layout</inlineHelpText>
        <label>Link to Site Layout</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Interconnection Requests</relationshipLabel>
        <relationshipName>Interconnection_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>indicates status of the request</inlineHelpText>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>AE Approval</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Revise &amp; Resubmit</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interconnection Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Interconnection Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interconnection Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Product_Data_Sheet_Not_Blank</fullName>
        <active>true</active>
        <description>prevents Michael from not updating this field</description>
        <errorConditionFormula>ISBLANK(TEXT(Are_Product_Data_Sheets_Attached__c ))&amp;&amp; 
$User.LastName = &quot;Conway&quot;</errorConditionFormula>
        <errorDisplayField>Are_Product_Data_Sheets_Attached__c</errorDisplayField>
        <errorMessage>A value must be selected.</errorMessage>
    </validationRules>
</CustomObject>